--- a/index.html
+++ b/index.html
@@ -1284,7 +1284,7 @@ For the rest of your life, you can use this process at anytime to get pain free.
 
 Spend the time now to master it and you&#39;ll change your life in the way and enjoy doing all the thing you ever wanted to do!
 
-If reading this book has changed you even a little bit, then I suggest to reread this book, so that the &quot;changed you&quot; may read new insights in your subsequent read.
+If reading this book has changed you, even slightly, I encourage you to read it again. The new version of you will discover fresh insights in each subsequent reading.
 
 Thank you for taking this course and I wish you a pain free life!
 
@@ -1327,7 +1327,7 @@ Do the exericise that you love to do, whether it is taking long walks, hikes, ru
 ║└──────────────────────────────────────┘║                                        
 ║                                        ║
 ║                                        ║
-║                  Vb                    ║
+║                  Vc                    ║
 ║                                        ║
 ║                 [[Begin]]                  ║
 ║                                        ║
@@ -1338,7 +1338,9 @@ Do the exericise that you love to do, whether it is taking long walks, hikes, ru
 
 
 
-</tw-passagedata><tw-passagedata pid="73" name="Book Dedication" tags="" position="475,1875" size="100,100">I&#39;m dedicating this book everyone suffering from chronic pain. There are millions if not billions of you out there. I know what it&#39;s like, I too suffered eight years of chronic pain.
+</tw-passagedata><tw-passagedata pid="73" name="Book Dedication" tags="" position="475,1875" size="100,100">I wish to express my profound appreciation to Adam Heller, the creator of Zero Pain Now®, for his dedication in refining and perfecting this healing process.
+
+I&#39;m dedicating this book everyone suffering from chronic pain. There are millions if not billions of you out there. I know what it&#39;s like, I too suffered eight years of chronic pain.
 
 Just for completeness, here is a [[larger list of phrases|More mind body phrases]] in the english language that give credibility to the mind body connection.
 
@@ -1511,18 +1513,16 @@ Show the passage number in the ui-bar - I think I got this label to work
 
 </tw-passagedata><tw-passagedata pid="76" name="Begin" tags="" position="250,25" size="100,100">INTRODUCTION
 
-This is an //intentional// book. It&#39;s probably different than any self healing book that you have read. The focus of the book is to guide you to take the actions needed to heal yourself.
+This is an //intentional// book. It&#39;s probably different than any self healing book that you have read. The focus of the book is to guide you to take the actions needed to heal yourself. Thousands have healed themselves with just this //basic information// and you can too. The book offers a natural and safe self-healing approach for chronic pain, requiring nothing more than YOU.
 
-It&#39;s also free so that you can focus on healing yourself with the basic information you need.
+It&#39;s also free so that you can focus on healing yourself and come back to it as often as you need. Please share it freely with anyone else that could gain from this knowledge.
 
 The sidebar on the left can be used to go back to a previous page.
 It can also be used to save or load your reading position. 
 
 On a mobile device, the sidebar might need to be expanded using the arrow on the top left.
 
-The book offers a natural and safe self-healing approach for chronic pain, requiring nothing more than YOU.
-
-Plan to set aside a couple of hours to do the experiences described in this book.
+Plan to set aside a couple of hours to fully engage in the experiences described in this book.
 
 [[Feedback]] from you is invaluable, and this book is continually refined based on your insights and updates&lt;span class=&quot;secret-dot&quot;&gt;&lt;a data-passage=&quot;Book Dedication&quot;&gt;.&lt;/a&gt;&lt;/span&gt;
 
