--- a/index.html
+++ b/index.html
@@ -1658,10 +1658,9 @@ He’s having cold feet
 I feel shaken up by what I saw.
 I’m completely rattled by what happened.
 
-[[Go back|Book Dedication]] </tw-passagedata><tw-passagedata pid="78" name="StoryMenu" tags="" position="150,650" size="100,100">[[Feedback]]</tw-passagedata><tw-passagedata pid="79" name="Feedback" tags="" position="325,650" size="100,100">Kindly share your feedback after finishing the entire book.
-You can click the feedback button on the left sidebar (for mobile devices it may need to be popped out by clicking on the arrow on the top left).
+[[Go back|Book Dedication]] </tw-passagedata><tw-passagedata pid="78" name="StoryMenu" tags="" position="150,650" size="100,100">[[Feedback]]</tw-passagedata><tw-passagedata pid="79" name="Feedback" tags="" position="325,650" size="100,100">[[Yes I have read the whole book and I&#39;m ready to give my feedback]]
 
-[[Yes I have read the whole book and I&#39;m ready to give my feedback]]
+[[No I have not read the whole book but I&#39;m ready to give my feedback anyway|Yes I have read the whole book and I&#39;m ready to give my feedback]]
 </tw-passagedata><tw-passagedata pid="80" name="Yes I have read the whole book and I&#39;m ready to give my feedback" tags="" position="150,800" size="100,100">&lt;iframe src=&quot;https://docs.google.com/forms/d/e/1FAIpQLSfGyrPrs188ErKnf8R6J2thM7mQhvJbaB6eMdbypKnjLRGr8w/viewform?embedded=true&quot; width=&quot;640&quot; height=&quot;1237&quot; frameborder=&quot;0&quot; marginheight=&quot;0&quot; marginwidth=&quot;0&quot;&gt;Loading…&lt;/iframe&gt;</tw-passagedata></tw-storydata>
 	<script id="script-sugarcube" type="text/javascript">
 	/*! SugarCube JS */
