--- a/index.html
+++ b/index.html
@@ -1288,7 +1288,9 @@ If reading this book has changed you, even slightly, I encourage you to read it 
 
 Thank you for taking this course and I wish you a pain free life!
 
-Please do give me [[Feedback]] and help me make this an even better book for you and others in pain.
+Please do give me [[Feedback]] and help me make this an even better book for you and others in pain. 
+
+If you want additional support for your healing, you can also reach me via the [[Feedback]] form.
 
 With love,
 
