--- a/index.html
+++ b/index.html
@@ -169,8 +169,13 @@ tw-passage {
 }
 
 a {
-    color: #7e5e31; /* Dark golden brown for links */
-    text-decoration: none;
+    color: #7e5e31; /* Dark golden brown for links */  
+    font-weight: bold; /* Bold to make the link stand out */
+    background-color: #f3e5c0; /* Subtle background highlight */
+    padding: 3px 5px; /* Padding to make it more prominent */
+    border-radius: 5px; /* Rounded corners for a button-like appearance */
+    text-decoration: none; /* Remove underline */
+    font-size: 1.1em; /* Slightly larger font size for emphasis */
 }
 
 a:hover {
@@ -1410,7 +1415,7 @@ Do the exericise that you love to do, whether it is taking long walks, hikes, ru
 ║└──────────────────────────────────────┘║                                        
 ║                                        ║
 ║                                        ║
-║                  Ve                    ║
+║                  Vf                    ║
 ║                                        ║
 ║                 [[Begin]]                  ║
 ║                                        ║
