--- a/index.html
+++ b/index.html
@@ -137,6 +137,17 @@ var LZString=function(){var r=String.fromCharCode,o="ABCDEFGHIJKLMNOPQRSTUVWXYZa
     border: 1px solid #b0976d; /* Optional: a border to match your theme */
 }
 
+/* Ensure the menu items have black text */
+#menu a {
+    color: black; /* Set the link color to black */
+    text-decoration: none; /* Optional: remove the underline for a cleaner look */
+}
+
+/* Optional: Keep the hover effect for desktop users */
+#menu a:hover {
+    color: white; /* White text on hover for contrast */
+}
+
 
 /* Universal Styling (Applies to Both Desktop and Mobile) */
 body {
@@ -1415,7 +1426,7 @@ Do the exericise that you love to do, whether it is taking long walks, hikes, ru
 ║└──────────────────────────────────────┘║                                        
 ║                                        ║
 ║                                        ║
-║                  Vf                    ║
+║                  Vg                    ║
 ║                                        ║
 ║                 [[Begin]]                  ║
 ║                                        ║
