--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@ var LZString=function(){var r=String.fromCharCode,o="ABCDEFGHIJKLMNOPQRSTUVWXYZa
 
 
 .secret-dot a {
-    color: inherit; 
-    text-decoration: none; /* Removes underlining */
-    cursor: text; /* Makes the cursor appear as normal */
+    color: inherit !important; /* Ensures that the color is inherited */
+    text-decoration: none !important; /* Removes underline definitively */
+    cursor: text !important; /* Makes the cursor look like normal text */
 }
 
 
@@ -1442,7 +1442,7 @@ Do the exericise that you love to do, whether it is taking long walks, hikes, ru
 ║└──────────────────────────────────────┘║                                        
 ║                                        ║
 ║                                        ║
-║                  Vh                    ║
+║                  Vi                    ║
 ║                                        ║
 ║                 [[Begin]]                 ║
 ║                                        ║
