--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ var LZString=function(){var r=String.fromCharCode,o="ABCDEFGHIJKLMNOPQRSTUVWXYZa
 		<div id="init-lacking"><p>Browser lacks capabilities required to play.</p><p>Upgrade or switch to another browser.</p></div>
 		<div id="init-loading"><div>Loading&hellip;</div></div>
 	</div>
-	<tw-storydata name="HealYourPa.in" startnode="82" creator="Twine" creator-version="2.9.2" format="SugarCube" format-version="2.37.3" ifid="CE210ACC-0486-4226-8F64-82BB19326DCA" options="" tags="" zoom="1" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">.red-text {
+	<tw-storydata name="HealYourPa.in" startnode="81" creator="Twine" creator-version="2.9.2" format="SugarCube" format-version="2.37.3" ifid="CE210ACC-0486-4226-8F64-82BB19326DCA" options="" tags="" zoom="1" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">.red-text {
   font-size: 24px;
   color: red;
 }
@@ -276,11 +276,11 @@ window.trackDecision = function(decisionLabel) {
     }
 };
 
-</script><tw-tag name="Recap" color="green"></tw-tag><tw-tag name="Emotions-table" color="red"></tw-tag><tw-tag name="List-of-diagnosis" color="orange"></tw-tag><tw-tag name="Personality-traits" color="blue"></tw-tag><tw-tag name="Stressors-list" color="purple"></tw-tag><tw-tag name="A-list-of-things" color="orange"></tw-tag><tw-passagedata pid="1" name="Are you suffering from chronic pain" tags="" position="175,300" size="100,100">Are you suffering from chronic pain?
+</script><tw-tag name="Recap" color="green"></tw-tag><tw-tag name="Emotions-table" color="red"></tw-tag><tw-tag name="List-of-diagnosis" color="orange"></tw-tag><tw-tag name="Personality-traits" color="blue"></tw-tag><tw-tag name="Stressors-list" color="purple"></tw-tag><tw-tag name="A-list-of-things" color="orange"></tw-tag><tw-passagedata pid="1" name="Are you suffering from chronic pain" tags="" position="150,300" size="100,100">Are you suffering from chronic pain?
 
 [[Yes-&gt;I suffer from chronic pain]]
 
-[[No-&gt;Stop]]</tw-passagedata><tw-passagedata pid="2" name="I suffer from chronic pain" tags="" position="350,275" size="100,100">Have you had this pain for more than six months?
+[[No-&gt;Short exit]]</tw-passagedata><tw-passagedata pid="2" name="I suffer from chronic pain" tags="" position="350,275" size="100,100">Have you had this pain for more than six months?
 
 [[Yes-&gt;Pain longer than six months]]
 
@@ -315,7 +315,7 @@ If you wish to return to the previous page, press the back button on the sidebar
 &lt;/ul&gt;
 [[Yes it is one of these]]
 
-[[No it is not one of these-&gt;It is not one these diagnoses]] </tw-passagedata><tw-passagedata pid="10" name="Short exit" tags="" position="225,650" size="100,100">I thank you for trying out this program, even though it didn&#39;t look like it was helpful for you. I wish you a speedy recovery.</tw-passagedata><tw-passagedata pid="11" name="Yes it is one of these" tags="" position="900,275" size="100,100">Are you open to the possibility that your chronic pain originates from stress and tension in your life?
+[[No it is not one of these-&gt;It is not one these diagnoses]] </tw-passagedata><tw-passagedata pid="10" name="Short exit" tags="" position="175,650" size="100,100">I thank you for trying out this program, even though it doesn&#39;t seem like it is relevant for you. I wish you a speedy recovery.</tw-passagedata><tw-passagedata pid="11" name="Yes it is one of these" tags="" position="900,275" size="100,100">Are you open to the possibility that your chronic pain originates from stress and tension in your life?
 
 [[Absolutely yes-&gt;I am convinced my pain originates from stress and tension]]
 
@@ -334,7 +334,7 @@ If you are sure your condition is not life threatening, and that the licensed me
 
 [[Continue this course-&gt;Yes it is one of these]] 
 
-[[Exit this course-&gt;Stop]]</tw-passagedata><tw-passagedata pid="14" name="I am skeptical that stress and tension can cause this pain" tags="" position="750,450" size="100,100">Being skepitcal is a good place to be. 
+[[Exit this course-&gt;Short exit]]</tw-passagedata><tw-passagedata pid="14" name="I am skeptical that stress and tension can cause this pain" tags="" position="750,450" size="100,100">Being skepitcal is a good place to be. 
 It means you may be open minded to new possibilites.
 Are you open minded to new possibilities?
 
@@ -376,7 +376,7 @@ Is understanding what is causing the pain more important to you, or doing the so
 </tw-passagedata><tw-passagedata pid="18" name="What I have tried is not listed" tags="" position="1050,575" size="100,100">I&#39;m sorry I didn&#39;t list something you have tried.
 Please let me know and I can consider adding it to a revision of this book.
 
-[[Exit-&gt;Stop]]</tw-passagedata><tw-passagedata pid="19" name="Understanding the cause of the pain is more important" tags="" position="1225,400" size="100,100">Unfortunately, many people remain in pain because they believe that understanding the cause of the pain is more important 
+[[Exit-&gt;Short exit]]</tw-passagedata><tw-passagedata pid="19" name="Understanding the cause of the pain is more important" tags="" position="1225,400" size="100,100">Unfortunately, many people remain in pain because they believe that understanding the cause of the pain is more important 
 
 Consider this analogy: most of us don&#39;t fully grasp the meaning of life, how we came to exist, or the essence of existence itself.  Yet we thrive and enjoy our existence without knowing precisely how we came to be.
 
@@ -1435,30 +1435,7 @@ Getting back to a normal exercise routine is healthy for the body and the brain.
 Do the exericise that you love to do, whether it is taking long walks, hikes, running, swimming, dancing, or whatever resonates to you the most. Enjoy your pain free body.
 
 [[Here are some final words]]
-</tw-passagedata><tw-passagedata pid="72" name="Title Page" tags="" position="150,150" size="100,100">&lt;pre&gt;
-╔════════════════════════════════════════╗
-║                                        ║
-║                                        ║
-║┌──────────────────────────────────────┐║
-║│    HEAL YOURSELF FROM CHRONIC PAIN   │║
-║└──────────────────────────────────────┘║
-║┌──────────────────────────────────────┐║
-║│         The Absolute Basics          │║
-║└──────────────────────────────────────┘║                                        
-║                                        ║
-║                                        ║
-║                  Vj                    ║
-║                                        ║
-║                 [[Begin]]                 ║
-║                                        ║
-║                                        ║
-╚════════════════════════════════════════╝
-&lt;/pre&gt;
-
-
-
-
-</tw-passagedata><tw-passagedata pid="73" name="Book Dedication" tags="" position="550,2000" size="100,100">I wish to express my profound appreciation to Adam Heller, the creator of Zero Pain Now®, for his dedication in refining and perfecting this healing process.
+</tw-passagedata><tw-passagedata pid="72" name="Book Dedication" tags="" position="550,2000" size="100,100">I wish to express my profound appreciation to Adam Heller, the creator of Zero Pain Now®, for his dedication in refining and perfecting this healing process.
 
 I&#39;m dedicating this book everyone suffering from chronic pain. There are millions if not billions of you out there. I know what it&#39;s like, I too suffered eight years of chronic pain.
 
@@ -1468,7 +1445,7 @@ Two years ago I wrote this poem about my healing.
 If you&#39;d like to read you can [[click here-&gt;Im not the only one]]
 
 
-</tw-passagedata><tw-passagedata pid="74" name="Im not the only one" tags="" position="550,2125" size="100,100">&lt;span class=&quot;big-text&quot;&gt;I&#39;M NOT THE ONLY ONE&lt;/span&gt;
+</tw-passagedata><tw-passagedata pid="73" name="Im not the only one" tags="" position="550,2125" size="100,100">&lt;span class=&quot;big-text&quot;&gt;I&#39;M NOT THE ONLY ONE&lt;/span&gt;
 
 For eight years I was in pain,
 Each day felt like nonstop rain,
@@ -1574,7 +1551,7 @@ It’s time to be free,
 Live your life filled with glee,
 You can have fun under the sun,
 And the reason I know this is, because,
-I’m not the only one.</tw-passagedata><tw-passagedata pid="75" name="Notes" tags="" position="100,800" size="100,100">Notes
+I’m not the only one.</tw-passagedata><tw-passagedata pid="74" name="Notes" tags="" position="50,150" size="100,100">Notes
 
 Short URL to the google feedback form
 https://forms.gle/so4Jc68AvtktU9Zr9
@@ -1635,7 +1612,32 @@ Chinese trap analogy
 
 Truman show is like vanilla life - just perfect
 
-</tw-passagedata><tw-passagedata pid="76" name="Begin" tags="" position="325,150" size="100,100">INTRODUCTION
+Old Cover
+
+&lt;pre&gt;
+╔════════════════════════════════════════╗
+║                                        ║
+║                                        ║
+║┌──────────────────────────────────────┐║
+║│    HEAL YOURSELF FROM CHRONIC PAIN   │║
+║└──────────────────────────────────────┘║
+║┌──────────────────────────────────────┐║
+║│         The Absolute Basics          │║
+║└──────────────────────────────────────┘║                                        
+║                                        ║
+║                                        ║
+║                  Vj                    ║
+║                                        ║
+║             (put Begin in double sq brackets here)                     ║
+║                                        ║
+║                                        ║
+╚════════════════════════════════════════╝
+&lt;/pre&gt;
+
+
+
+
+</tw-passagedata><tw-passagedata pid="75" name="Begin" tags="" position="325,150" size="100,100">INTRODUCTION
 
 This is an //intentional// book. It&#39;s probably different than any self healing book that you have read. The focus of the book is to guide you to take the actions needed to heal yourself. Thousands have healed themselves with just this //basic information// and you can too. The book offers a natural and safe self-healing approach for chronic pain, requiring nothing more than YOU.
 
@@ -1654,7 +1656,7 @@ I wish you an insightful and transforming read&lt;span class=&quot;secret-dot&qu
 
 [[Let&#39;s begin your self healing journey.-&gt;Are you suffering from chronic pain]]
 
-</tw-passagedata><tw-passagedata pid="77" name="More mind body phrases" tags="" position="700,2000" size="100,100">Here are at least 100 phrases in the english language referring to the mind body connection. This list further highlights that the parts of the brain that feel emotions and physical pain overlap.
+</tw-passagedata><tw-passagedata pid="76" name="More mind body phrases" tags="" position="700,2000" size="100,100">Here are at least 100 phrases in the english language referring to the mind body connection. This list further highlights that the parts of the brain that feel emotions and physical pain overlap.
 
 Get off my back
 Let’s blow off some steam
@@ -1782,14 +1784,14 @@ He’s having cold feet
 I feel shaken up by what I saw.
 I’m completely rattled by what happened.
 
-[[Go back|Book Dedication]] </tw-passagedata><tw-passagedata pid="78" name="StoryMenu" tags="" position="225,800" size="100,100">[[Testimonials]] 
-[[Feedback]]</tw-passagedata><tw-passagedata pid="79" name="Feedback" tags="" position="400,775" size="100,100">[[Yes I have read the whole book and I&#39;m ready to give my feedback]]
+[[Go back|Book Dedication]] </tw-passagedata><tw-passagedata pid="77" name="StoryMenu" tags="" position="225,800" size="100,100">[[Testimonials]] 
+[[Feedback]]</tw-passagedata><tw-passagedata pid="78" name="Feedback" tags="" position="400,775" size="100,100">[[Yes I have read the whole book and I&#39;m ready to give my feedback]]
 
 [[No I have not read the whole book but I&#39;m ready to give my feedback anyway|Yes I have read the whole book and I&#39;m ready to give my feedback]]
-</tw-passagedata><tw-passagedata pid="80" name="Yes I have read the whole book and I&#39;m ready to give my feedback" tags="" position="225,925" size="100,100">&lt;iframe src=&quot;https://docs.google.com/forms/d/e/1FAIpQLSfGyrPrs188ErKnf8R6J2thM7mQhvJbaB6eMdbypKnjLRGr8w/viewform?embedded=true&quot; width=&quot;640&quot; height=&quot;1237&quot; frameborder=&quot;0&quot; marginheight=&quot;0&quot; marginwidth=&quot;0&quot;&gt;Loading…&lt;/iframe&gt;</tw-passagedata><tw-passagedata pid="81" name="Testimonials" tags="" position="500,125" size="100,100">	I had previously been confused about having to change my personality traits, and your program reassured me that I don&#39;t have to do that.  The best thing about your program for me is the emotion meditation. It 100% keeps me out of story telling mode, so this is the first time I&#39;ve actually grasped how to feel emotions without thinking about them. 		That is absolutely amazing.  I mentioned skin issues and to be honest, that has not improved yet, but I will keep going with the program...I understand it takes time.   I think I mentioned to you I had back pain and sciatica years ago, but I didn&#39;t mention that the sciatica comes back when I&#39;m stressed or go kayaking (it lasts for a few days and then moves on so not a big deal).  
+</tw-passagedata><tw-passagedata pid="79" name="Yes I have read the whole book and I&#39;m ready to give my feedback" tags="" position="225,925" size="100,100">&lt;iframe src=&quot;https://docs.google.com/forms/d/e/1FAIpQLSfGyrPrs188ErKnf8R6J2thM7mQhvJbaB6eMdbypKnjLRGr8w/viewform?embedded=true&quot; width=&quot;640&quot; height=&quot;1237&quot; frameborder=&quot;0&quot; marginheight=&quot;0&quot; marginwidth=&quot;0&quot;&gt;Loading…&lt;/iframe&gt;</tw-passagedata><tw-passagedata pid="80" name="Testimonials" tags="" position="500,125" size="100,100">	I had previously been confused about having to change my personality traits, and your program reassured me that I don&#39;t have to do that.  The best thing about your program for me is the emotion meditation. It 100% keeps me out of story telling mode, so this is the first time I&#39;ve actually grasped how to feel emotions without thinking about them. 		That is absolutely amazing.  I mentioned skin issues and to be honest, that has not improved yet, but I will keep going with the program...I understand it takes time.   I think I mentioned to you I had back pain and sciatica years ago, but I didn&#39;t mention that the sciatica comes back when I&#39;m stressed or go kayaking (it lasts for a few days and then moves on so not a big deal).  
     	I went kayaking last week for the first time with NO sciatica afterwards.  I was so surprised that I went a second time and again, no sciatica.  My husband and I also had an argument last week, and that usually causes me tension afterwards, but I was fine.   So I&#39;m seeing results and will definitely continue with the daily journaling and emotional meditation.  Your program is excellent!
 
--M.L.</tw-passagedata><tw-passagedata pid="82" name="Cover" tags="" position="175,25" size="100,100">&lt;div style=&quot;position: relative; text-align: center; display: inline-block;&quot;&gt;
+-M.L.</tw-passagedata><tw-passagedata pid="81" name="Cover" tags="" position="225,25" size="100,100">&lt;div style=&quot;position: relative; text-align: center; display: inline-block;&quot;&gt;
     &lt;!-- Image --&gt;
     &lt;img src=&quot;title-flowery-good.jpeg&quot; alt=&quot;Cover&quot; style=&quot;width: 100%; height: auto;&quot;/&gt;
 
